--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         display: block;
         margin: auto;
       }
+
       .procedure {
         display: block;
         font-size: 18px;
@@ -100,6 +101,18 @@
       }
       .coder {
         color: blue;
+      }
+      @media (max-width: 700px) {
+        img {
+          width: 200px;
+          margin: 0;
+        }
+        h1 {
+          font-size: 42px;
+        }
+        h2 {
+          font-size: 26px;
+        }
       }
     </style>
   </head>
