--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
         color: white;
         cursor: pointer;
       }
+      .coder {
+        color: blue;
+      }
 
       @media (max-width: 700px) {
         img {
@@ -181,8 +184,13 @@
         >
         <p><button>Learn to Crochet🧶</button></p>
         <p class="footer">
-          This page was built by
-          <a href="#" class="external-link">Elizabeth Wirsiy</a>
+          This page was
+          <a
+            href="https://github.com/Elisawirsiy/Landing-page"
+            class="external-link"
+            >coded</a
+          >
+          by <span class="coder">Elizabeth Wirsiy</span>
         </p>
       </div>
     </div>
