--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       @media (max-width: 700px) {
         img {
           width: 300px;
-          margin: 0;
+          margin: auto;
         }
         h1 {
           font-size: 42px;
